Updating from latest sources

--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@ require a preprocessing stage that inlines all HTML imports and rewrites the new
 CSS selectors like <code>:host</code>, <code>::content</code>, <code>/deep/</code> etc. There's no easy way to
 tie all this together and frankly, I don't care enough since I'll personally
 only use this for locally hosted pages rendered in Chrome.</p><p>If someone wants to do the required work to implement the whole preprocessing
-pipeline, pull requests are welcome.</p><h2>Version History</h2><h3>0.0.3</h3><ul>
+pipeline, pull requests are welcome.</p><h2>Version History</h2><h3>0.0.4</h3><ul>
+<li>Fixed issue with text floating outside the statblock on Chrome 50+.</li>
+</ul><h3>0.0.3</h3><ul>
 <li>Simpler way of supporting two-column layout.</li>
 </ul><h3>0.0.2</h3><ul>
 <li><code>&lt;property-line&gt;</code> can now be used for legendary actions since it doesn't
