Removed http/https from external google styles to prevent mixed content warning.

--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -1,4 +1,4 @@
-<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:700'
+<link href='//fonts.googleapis.com/css?family=Libre+Baskerville:700'
       rel='stylesheet' type='text/css'>
 
 <template id="creature-heading">
