--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -1,4 +1,4 @@
-<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic'
+<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic'
       rel='stylesheet' type='text/css'>
 <template id="stat-block">
   <style>
