--- a/src/abilities-block.html
+++ b/src/abilities-block.html
@@ -59,7 +59,7 @@
 
   var elemName = 'abilities-block';
   var thatDoc = document;
-  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
+  var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
     createdCallback: {
       value: function() {
