--- a/src/property-block.html
+++ b/src/property-block.html
@@ -31,7 +31,7 @@
 (function(window, document) {
   var elemName = 'property-block';
   var thatDoc = document;
-  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
+  var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
     createdCallback: {
       value: function() {
