--- a/src/property-line.html
+++ b/src/property-line.html
@@ -30,7 +30,7 @@
 (function(window, document) {
   var elemName = 'property-line';
   var thatDoc = document;
-  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
+  var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
     createdCallback: {
       value: function() {
