--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -90,7 +90,7 @@
 (function(window, document) {
   var elemName = 'stat-block';
   var thatDoc = document;
-  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
+  var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
     createdCallback: {
       value: function() {
