--- a/src/tapered-rule.html
+++ b/src/tapered-rule.html
@@ -17,7 +17,7 @@
 (function(window, document) {
   var elemName = 'tapered-rule';
   var thatDoc = document;
-  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
+  var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
     createdCallback: {
       value: function() {
