--- a/src/tapered-rule.html
+++ b/src/tapered-rule.html
@@ -8,7 +8,7 @@
       margin-bottom: 0.35em;
     }
   </style>
-  <svg height="5" width="400">
+  <svg height="5" width="100%">
     <polyline points="0,0 400,2.5 0,5"/>
   </svg>
 </template>
